welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: type mismatch;
 found   : Unit
 required: Boolean
def haveBaggle():Boolean = {
                           ^Program:18: error: type mismatch;
 found   : Unit
 required: Boolean
}while (vuBiscuit())
                 ^Program:23: error: not found: value nbPas
		for (i<- 1 to nbPas){
                              ^